# cicdtest

./: .actrc  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/cicdtest/: test.py
src/watergateonthefly/: __init__.py  test.py
