[project]
name = "cicdtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bryan Barcelona", email = "131413239+bryanbarcelona@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
cicdtest = "cicdtest:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
