[project]
name = "cicdtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bryan Barcelona", email = "131413239+bryanbarcelona@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "requests>=2.32.5",
]

[project.scripts]
cicdtest = "cicdtest:main"


[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ty.src]
include = ["src/", "tests/"]
exclude = [".venv"]


[tool.ruff]
preview = true
line-length = 120
target-version = "py312"
extend-exclude = ["tests", "legacy", "main.py"]
fix = true

lint.select = [
  "E", "W", "F", "I", "UP", "B", "C4", "S", "BLE", "FBT",
  "A", "C90", "T10", "ISC", "ICN", "G", "PIE", "T20",
  "PT", "Q", "RUF", "SIM", "TID", "ARG", "PTH", "ERA",
  "PL", "TRY", "ANN",  #  keep ANN, drop TCH/PYI
]
lint.ignore = [
  "E501", "ISC001", "COM812", "S101",
  "PLR0913", "PLR2004", "TRY003", "ANN401",
  "Q000", "Q003", "T201", "RUF003", "FBT001",
  "RUF067", "PLW0603", "ANN204",
]

[tool.ruff.lint.isort]
known-first-party = ["brybox"]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN001", "ANN201", "PLC2701", "PT006", "PLR6301"]
"src/brybox/utils/settings.py" = ["ANN002", "ANN003", "ARG004"]

[tool.ty.rules]
invalid-return-type = "error"

[tool.pip-audit]
exclude = ["brybox"]


[tool.commitizen]
version_provider = "uv"
tag_format = "v${version}"
major_version_zero = true
bump_message = "release $current_version → $new_version [skip-ci]"



[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
#default = true
explicit = true

